# test-docs

./: .actrc  .copier-answers.yml  .gitattributes  .gitignore  .readthedocs.yaml  .vale.ini  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  revisions.yaml
.devcontainer/: devcontainer.json  install-latex.sh  setup.sh  show-pdf.sh  sync-styles.sh
.github/workflows/: docs.yml  release.yml
docs/: conf.py  index.md  introduction.md  maintenance.md  operations.md  revisions.md
docs/_static/: custom.css
styles/config/vocabularies/Spiri/: accept.txt
